// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render the large size 1`] = `
.c0 {
  background: linear-gradient(180deg, #ff5f5f 0%, #f062c0 50%);
  color: #FAFAFA;
  border: 0;
  border-radius: 0.4rem;
  padding: 0.8rem;
  height: 5rem;
  font-size: 1.6rem;
  padding: 0.8rem 4.8rem;
}

<button
  class="c0"
>
  <span>
    Buy Now
  </span>
</button>
`;

exports[`<Button /> should render the medium size button by default 1`] = `
.c0 {
  background: linear-gradient(180deg, #ff5f5f 0%, #f062c0 50%);
  color: #FAFAFA;
  border: 0;
  border-radius: 0.4rem;
  padding: 0.8rem;
  height: 4rem;
  font-size: 1.4rem;
  padding: 0.8rem 3.2rem;
}

<button
  class="c0"
>
  <span>
    Buy Now
  </span>
</button>
`;

exports[`<Button /> should render the small size 1`] = `
.c0 {
  background: linear-gradient(180deg, #ff5f5f 0%, #f062c0 50%);
  color: #FAFAFA;
  border: 0;
  border-radius: 0.4rem;
  padding: 0.8rem;
  height: 3rem;
  font-size: 1.2rem;
}

<button
  class="c0"
>
  <span>
    Buy Now
  </span>
</button>
`;
